--- a/admin/auth.html
+++ b/admin/auth.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Autenticación - Karolina Fotografía</title>
+  <title>Uwierzytelnianie - Karolina Fotografia</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <style>
     body {
@@ -44,9 +44,9 @@
 </head>
 <body>
   <div class="auth-container">
-    <img src="/image.png" alt="Karolina Fotografía" class="logo">
-    <h1>Panel de Administración</h1>
-    <p>Inicia sesión para acceder al panel de administración</p>
+    <img src="/image.png" alt="Karolina Fotografia" class="logo">
+    <h1>Panel Administracyjny</h1>
+    <p>Zaloguj się, aby uzyskać dostęp do panelu administracyjnego</p>
     <div data-netlify-identity-menu></div>
   </div>
 
