--- a/admin/index.html
+++ b/admin/index.html
@@ -39,7 +39,7 @@
     <p style="margin-top: 20px; color: #666;">Cargando panel administrativo...</p>
   </div>
   
-  <script src="https://unpkg.com/decap-cms@3.0.14/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/decap-cms/dist/decap-cms.js" defer></script>
   <script>
     // Inicialización simple sin traducciones complejas
     window.addEventListener('load', function() {
