--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
   <title>Panel Administracyjny - Karolina Fotografia</title>
   <link rel="icon" type="image/png" href="/image.png" />
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script src="https://unpkg.com/decap-cms/dist/decap-cms.js" defer></script>
+  <script src="https://unpkg.com/decap-cms/dist/decap-cms.js"></script>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -53,41 +53,80 @@
       }
     };
 
-    function initializeCMS() {
-      if (typeof CMS === 'undefined') {
-        // Esperar a que CMS esté disponible
-        setTimeout(initializeCMS, 100);
-        return;
-      }
-
-      // Inicjalizacja Netlify Identity
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-
-      // Zarejestruj polskie tłumaczenia
-      CMS.registerLocale('pl', pl);
-
-      // Ukryj spinner ładowania po pomyślnej inicjalizacji
-      CMS.on('mounted', () => {
-        console.log('CMS zamontowany, ukrywanie spinnera.');
-        const loadingDiv = document.querySelector('.loading');
-        if (loadingDiv) {
-          loadingDiv.style.display = 'none';
+    // Esperar a que el script de CMS se cargue completamente
+    function waitForCMS() {
+      return new Promise((resolve) => {
+        if (typeof window.CMS !== 'undefined' && window.CMS.init) {
+          resolve();
+        } else {
+          const checkCMS = () => {
+            if (typeof window.CMS !== 'undefined' && window.CMS.init) {
+              resolve();
+            } else {
+              setTimeout(checkCMS, 50);
+            }
+          };
+          checkCMS();
         }
       });
-
-      // Inicjalizuj CMS. Domyślnie załaduje /admin/config.yml
-      CMS.init();
     }
 
-    window.addEventListener('DOMContentLoaded', initializeCMS);
+    async function initializeCMS() {
+      try {
+        // Esperar a que CMS esté disponible
+        await waitForCMS();
+        
+        console.log('CMS cargado, iniciando configuración...');
+
+        // Inicjalizacja Netlify Identity
+        if (window.netlifyIdentity) {
+          window.netlifyIdentity.on("init", user => {
+            if (!user) {
+              window.netlifyIdentity.on("login", () => {
+                document.location.href = "/admin/";
+              });
+            }
+          });
+        }
+
+        // Zarejestruj polskie tłumaczenia
+        if (window.CMS.registerLocale) {
+          window.CMS.registerLocale('pl', pl);
+          console.log('Traducciones polacas registradas');
+        }
+
+        // Ukryj spinner ładowania po pomyślnej inicjalizacji
+        if (window.CMS.on) {
+          window.CMS.on('mounted', () => {
+            console.log('CMS zamontowany, ukrywanie spinnera.');
+            const loadingDiv = document.querySelector('.loading');
+            if (loadingDiv) {
+              loadingDiv.style.display = 'none';
+            }
+          });
+        }
+
+        // Inicjalizuj CMS. Domyślnie załaduje /admin/config.yml
+        if (window.CMS.init) {
+          window.CMS.init();
+          console.log('CMS inicializado correctamente');
+        }
+      } catch (error) {
+        console.error('Error al inicializar CMS:', error);
+        // Mostrar mensaje de error al usuario
+        const loadingDiv = document.querySelector('.loading');
+        if (loadingDiv) {
+          loadingDiv.innerHTML = '<div style="color: red; text-align: center;"><h3>Error al cargar el CMS</h3><p>Por favor, recarga la página</p></div>';
+        }
+      }
+    }
+
+    // Inicializar cuando el DOM esté listo
+    if (document.readyState === 'loading') {
+      document.addEventListener('DOMContentLoaded', initializeCMS);
+    } else {
+      initializeCMS();
+    }
   </script>
 </body>
 </html>
