--- a/admin/index.html
+++ b/admin/index.html
@@ -39,6 +39,10 @@
     <div class="spinner"></div>
     <p style="margin-top: 20px; color: #666;">Ładowanie panelu administracyjnego...</p>
   </div>
+  
+  <!-- Contenedor para Decap CMS -->
+  <div id="nc-root"></div>
+  
   <!-- Include the script that builds the page and powers Decap CMS -->
   <script>
     const pl = {
