--- a/admin/index.html
+++ b/admin/index.html
@@ -12,7 +12,7 @@
   
 
   
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/decap-cms@3.7.1/dist/decap-cms.js"></script>
   
   <script>
     // Polish translations for Netlify CMS
