--- a/admin/index.html
+++ b/admin/index.html
@@ -13,7 +13,7 @@
 
   
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script src="https://unpkg.com/decap-cms@3.1.10/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   
   <script>
     // Initialize Netlify Identity
